SERVER-4674