src/mongo/db/pipeline/accumulator.cpp
@@ -56,6 +56,8 @@ namespace mongo {
     }
 
     void agg_framework_reservedErrors() {
+        uassert(15956, "reserved error", false);
+
         uassert(16028, "reserved error", false);
         uassert(16029, "reserved error", false);
         uassert(16030, "reserved error", false);
